# inf-lab-4

./: CMakeLists.txt  README.md
PATypes/include/PATypes/: BinTree.h  Deque.h  DynamicArray.h  IEnumerator.h  LinkedList.h  MapReduce.h  Queue.h  SegmentedList.h  Sequence.h  Set.h  Stack.h
contrib/: 4test.input  5insert  5map  5test.input  5union  6map  6union  7insert  7map  7union  benchmark.ods
include/: Person.h  argParser.h  hanoiTowers.h
src/: argParserTest.cpp  arraySequenceTest.cpp  binaryTreeTest.cpp  dequeTest.cpp  hanoiTest.cpp  largeDataTest.cpp  listSequenceTest.cpp  queueTest.cpp  setTest.cpp  stackTest.cpp  userInterface.cpp
